# dscontainer

./: .dockerignore  Dockerfile  README.md  README_FULL.md  docker-build.sh  docker-compose.yml  pyproject.toml  spec.md  test_mps.py
src/: verify_gpu.py
